# Mee7

./: .gitignore  README.md  pyproject.toml
mee7/: bot.py  schema.sql  utils.py
mee7/DATA/: schema.psql  schema.sql
mee7/cogs/: custom_commands.py  economy.py  errors.py  events.py  help.py  misc.py  moderation.py  reaction_roles.py  rss.py  set_up.py  set_up_economy.py  store.py  triggers.py
