[tool.poetry]
name = "mee7"
version = "0.1.0"
description = "A Mee6 clone with some different features"
authors = ["Spyros Roum"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.3"
asyncpg = "^0.20.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
